# link-crawl

./: Dockerfile  docker-compose.yaml  pyproject.toml
urlcollector/: Dockerfile  main.py  url_Collect.py
urlcollector/templates/: index.html
