[tool.poetry]
name = "urlcollector"
version = "0.1.0"
description = ""
authors = ["khosro <khosro@khosro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
selenium = "^4.13.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
